[package]
name = "ironworker"
version = "0.1.1"
edition = "2021"
publish = true
description = "lastfm scrobbler"
homepage = "https://github.com/IrvingWash/ironworker-rs"
repository = "https://github.com/IrvingWash/ironworker-rs.git"
readme = "README.md"
documentation = "https://github.com/IrvingWash/ironworker-rs"
license = "MIT"
authors = ["WI"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
dirs = "5.0.1"
md5 = "0.7.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
